--- a/nbs/collaborative-filtering.ipynb
+++ b/nbs/collaborative-filtering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "8f191366",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,13 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "58f16b8c",
    "metadata": {},
    "outputs": [],
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "24c22cbe",
    "metadata": {},
    "outputs": [],
@@ -56,254 +57,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "32abe2cc",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "index",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "ISBN",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "Book-Title",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "Book-Author",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "Year-Of-Publication",
-         "rawType": "object",
-         "type": "unknown"
-        },
-        {
-         "name": "Publisher",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "Image-URL-S",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "Image-URL-M",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "Image-URL-L",
-         "rawType": "object",
-         "type": "string"
-        }
-       ],
-       "ref": "16d10b53-eecf-4e57-a6ed-7816bd8564d2",
-       "rows": [
-        [
-         "0",
-         "0195153448",
-         "Classical Mythology",
-         "Mark P. O. Morford",
-         "2002",
-         "Oxford University Press",
-         "http://images.amazon.com/images/P/0195153448.01.THUMBZZZ.jpg",
-         "http://images.amazon.com/images/P/0195153448.01.MZZZZZZZ.jpg",
-         "http://images.amazon.com/images/P/0195153448.01.LZZZZZZZ.jpg"
-        ],
-        [
-         "1",
-         "0002005018",
-         "Clara Callan",
-         "Richard Bruce Wright",
-         "2001",
-         "HarperFlamingo Canada",
-         "http://images.amazon.com/images/P/0002005018.01.THUMBZZZ.jpg",
-         "http://images.amazon.com/images/P/0002005018.01.MZZZZZZZ.jpg",
-         "http://images.amazon.com/images/P/0002005018.01.LZZZZZZZ.jpg"
-        ],
-        [
-         "2",
-         "0060973129",
-         "Decision in Normandy",
-         "Carlo D'Este",
-         "1991",
-         "HarperPerennial",
-         "http://images.amazon.com/images/P/0060973129.01.THUMBZZZ.jpg",
-         "http://images.amazon.com/images/P/0060973129.01.MZZZZZZZ.jpg",
-         "http://images.amazon.com/images/P/0060973129.01.LZZZZZZZ.jpg"
-        ],
-        [
-         "3",
-         "0374157065",
-         "Flu: The Story of the Great Influenza Pandemic of 1918 and the Search for the Virus That Caused It",
-         "Gina Bari Kolata",
-         "1999",
-         "Farrar Straus Giroux",
-         "http://images.amazon.com/images/P/0374157065.01.THUMBZZZ.jpg",
-         "http://images.amazon.com/images/P/0374157065.01.MZZZZZZZ.jpg",
-         "http://images.amazon.com/images/P/0374157065.01.LZZZZZZZ.jpg"
-        ],
-        [
-         "4",
-         "0393045218",
-         "The Mummies of Urumchi",
-         "E. J. W. Barber",
-         "1999",
-         "W. W. Norton &amp; Company",
-         "http://images.amazon.com/images/P/0393045218.01.THUMBZZZ.jpg",
-         "http://images.amazon.com/images/P/0393045218.01.MZZZZZZZ.jpg",
-         "http://images.amazon.com/images/P/0393045218.01.LZZZZZZZ.jpg"
-        ]
-       ],
-       "shape": {
-        "columns": 8,
-        "rows": 5
-       }
-      },
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ISBN</th>\n",
-       "      <th>Book-Title</th>\n",
-       "      <th>Book-Author</th>\n",
-       "      <th>Year-Of-Publication</th>\n",
-       "      <th>Publisher</th>\n",
-       "      <th>Image-URL-S</th>\n",
-       "      <th>Image-URL-M</th>\n",
-       "      <th>Image-URL-L</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0195153448</td>\n",
-       "      <td>Classical Mythology</td>\n",
-       "      <td>Mark P. O. Morford</td>\n",
-       "      <td>2002</td>\n",
-       "      <td>Oxford University Press</td>\n",
-       "      <td>http://images.amazon.com/images/P/0195153448.0...</td>\n",
-       "      <td>http://images.amazon.com/images/P/0195153448.0...</td>\n",
-       "      <td>http://images.amazon.com/images/P/0195153448.0...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0002005018</td>\n",
-       "      <td>Clara Callan</td>\n",
-       "      <td>Richard Bruce Wright</td>\n",
-       "      <td>2001</td>\n",
-       "      <td>HarperFlamingo Canada</td>\n",
-       "      <td>http://images.amazon.com/images/P/0002005018.0...</td>\n",
-       "      <td>http://images.amazon.com/images/P/0002005018.0...</td>\n",
-       "      <td>http://images.amazon.com/images/P/0002005018.0...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0060973129</td>\n",
-       "      <td>Decision in Normandy</td>\n",
-       "      <td>Carlo D'Este</td>\n",
-       "      <td>1991</td>\n",
-       "      <td>HarperPerennial</td>\n",
-       "      <td>http://images.amazon.com/images/P/0060973129.0...</td>\n",
-       "      <td>http://images.amazon.com/images/P/0060973129.0...</td>\n",
-       "      <td>http://images.amazon.com/images/P/0060973129.0...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0374157065</td>\n",
-       "      <td>Flu: The Story of the Great Influenza Pandemic...</td>\n",
-       "      <td>Gina Bari Kolata</td>\n",
-       "      <td>1999</td>\n",
-       "      <td>Farrar Straus Giroux</td>\n",
-       "      <td>http://images.amazon.com/images/P/0374157065.0...</td>\n",
-       "      <td>http://images.amazon.com/images/P/0374157065.0...</td>\n",
-       "      <td>http://images.amazon.com/images/P/0374157065.0...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0393045218</td>\n",
-       "      <td>The Mummies of Urumchi</td>\n",
-       "      <td>E. J. W. Barber</td>\n",
-       "      <td>1999</td>\n",
-       "      <td>W. W. Norton &amp;amp; Company</td>\n",
-       "      <td>http://images.amazon.com/images/P/0393045218.0...</td>\n",
-       "      <td>http://images.amazon.com/images/P/0393045218.0...</td>\n",
-       "      <td>http://images.amazon.com/images/P/0393045218.0...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         ISBN                                         Book-Title  \\\n",
-       "0  0195153448                                Classical Mythology   \n",
-       "1  0002005018                                       Clara Callan   \n",
-       "2  0060973129                               Decision in Normandy   \n",
-       "3  0374157065  Flu: The Story of the Great Influenza Pandemic...   \n",
-       "4  0393045218                             The Mummies of Urumchi   \n",
-       "\n",
-       "            Book-Author Year-Of-Publication                   Publisher  \\\n",
-       "0    Mark P. O. Morford                2002     Oxford University Press   \n",
-       "1  Richard Bruce Wright                2001       HarperFlamingo Canada   \n",
-       "2          Carlo D'Este                1991             HarperPerennial   \n",
-       "3      Gina Bari Kolata                1999        Farrar Straus Giroux   \n",
-       "4       E. J. W. Barber                1999  W. W. Norton &amp; Company   \n",
-       "\n",
-       "                                         Image-URL-S  \\\n",
-       "0  http://images.amazon.com/images/P/0195153448.0...   \n",
-       "1  http://images.amazon.com/images/P/0002005018.0...   \n",
-       "2  http://images.amazon.com/images/P/0060973129.0...   \n",
-       "3  http://images.amazon.com/images/P/0374157065.0...   \n",
-       "4  http://images.amazon.com/images/P/0393045218.0...   \n",
-       "\n",
-       "                                         Image-URL-M  \\\n",
-       "0  http://images.amazon.com/images/P/0195153448.0...   \n",
-       "1  http://images.amazon.com/images/P/0002005018.0...   \n",
-       "2  http://images.amazon.com/images/P/0060973129.0...   \n",
-       "3  http://images.amazon.com/images/P/0374157065.0...   \n",
-       "4  http://images.amazon.com/images/P/0393045218.0...   \n",
-       "\n",
-       "                                         Image-URL-L  \n",
-       "0  http://images.amazon.com/images/P/0195153448.0...  \n",
-       "1  http://images.amazon.com/images/P/0002005018.0...  \n",
-       "2  http://images.amazon.com/images/P/0060973129.0...  \n",
-       "3  http://images.amazon.com/images/P/0374157065.0...  \n",
-       "4  http://images.amazon.com/images/P/0393045218.0...  "
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "books.head()"
    ]
@@ -314,7 +71,219 @@
    "id": "1a8cceef",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# get the meta data\n",
+    "books.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3a8b096",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load the ratings data\n",
+    "ratings = pd.read_csv('/Users/avikumart/Documents/GitHub/Book-recommendation-system/data/Ratings.csv', index_col=False, encoding='latin-1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0534a84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ratings.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ec5d750",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ratings.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "437659e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# clean the data and merge book and ratings data on ISBN\n",
+    "books = books.dropna(inplace=False)\n",
+    "books"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05638c4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# drop the un unnecessary columns\n",
+    "books = books.drop(columns=['Image-URL-S', 'Image-URL-M', 'Image-URL-L', 'Year-Of-Publication'], axis=1)\n",
+    "books.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1cd2041b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# apply regex of non-alphanumeric characters to clean the data\n",
+    "books['Book-Title'] = books['Book-Title'].apply(lambda x: re.sub(\"[\\W_]+\", \" \", x).strip())\n",
+    "# merge the dataframes\n",
+    "book_ratings = pd.merge(books, ratings, on='ISBN')\n",
+    "book_ratings.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83601e80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check the meta data of merged dataframe\n",
+    "book_ratings.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2126430f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# rename the columns for better understanding\n",
+    "book_ratings = book_ratings.rename(columns={'User-ID': 'user_id', 'Book-Rating': 'book_rating', 'Book-Title': 'book_title', 'Book-Author': 'book_author', 'Publisher': 'publisher', 'ISBN': 'isbn'})\n",
+    "book_ratings.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f961c144",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# remove the less rated books and users\n",
+    "data = book_ratings[\"isbn\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7b6b685",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# remove lower rated books\n",
+    "ratings_threshold = 1\n",
+    "book_ratings = book_ratings[book_ratings['isbn'].isin(data[data > ratings_threshold].index)]\n",
+    "# remove lower rated users\n",
+    "book_ratings.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a342c8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# show the top 5 rows\n",
+    "book_ratings.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ecb3182b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# total unique users and books\n",
+    "n_users = book_ratings.user_id.nunique()\n",
+    "n_books = book_ratings.isbn.nunique()\n",
+    "print(f'Total unique users: {n_users}')\n",
+    "print(f'Total unique books: {n_books}')\n",
+    "\n",
+    "# top 10 books with highest ratings\n",
+    "top_books = book_ratings.groupby('book_title')['book_rating'].count().sort_values(ascending=False).head(10)\n",
+    "top_books.plot(kind='barh', figsize=(10,6), color='skyblue')\n",
+    "plt.xlabel('Number of Ratings')\n",
+    "plt.title('Top 10 Books with Highest Ratings')\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76bcbb51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check the data sparsity\n",
+    "sparsity = 1.0 - (len(book_ratings) / (n_users * n_books))\n",
+    "print(f'Data Sparsity: {sparsity:.4f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1290f954",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check total book authrs and publishers\n",
+    "n_authors = book_ratings.book_author.nunique()\n",
+    "n_publishers = book_ratings.publisher.nunique()\n",
+    "print(f'Total unique authors: {n_authors}')\n",
+    "print(f'Total unique publishers: {n_publishers}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a2b1057",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save the book ratings dataframe\n",
+    "book_ratings.to_csv('/Users/avikumart/Documents/GitHub/Book-recommendation-system/data/book_ratings.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "524bfccd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# remove the book author and publisher columns for collaborative filtering\n",
+    "book_ratings = book_ratings.drop(columns=['book_author', 'publisher'], axis=1)\n",
+    "book_ratings.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9f24c71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save the cleaned book ratings dataframe\n",
+    "book_ratings.to_csv('/Users/avikumart/Documents/GitHub/Book-recommendation-system/data/cleaned_book_ratings.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
